<resources>
<!-- interface 1 -->
    <string name="Next">Next</string>
    <string name="This_to_do">This to do</string>
<!--    interface 2-->
    <string name="login">Log in</string>
    <string name="txt_Wellcom_back">welcome Back</string>
    <string name="txt_anaccount_login">if you already have an account, log in</string>
    <string name="et_UserName_hint">UserName</string>
    <string name="et_Password_hint">Password</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_an_account">You Dont Have An Account ?</string>
    <string name="app_name">BMI-PROJECT</string>
<!--  interface 3  -->
    <string name="txtCreate_New_Account">Create New Account</string>
    <string name="txt_if_have_an_account">if you do not already have an account</string>
    <string name="Name_hint">Name</string>
    <string name="E_mail_hint">E_Mail</string>
    <string name="B_Create">Create</string>
    <string name="txt_You_Have_An_Account">You Have An Account ?</string>
    <string name="txt_Login">Login</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
</resources>