<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_wellcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_Wellcom_back"
        android:textAlignment="center"
        android:textColor="@color/ff21"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/txt_accountlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_anaccount_login"
        android:textColor="@color/black_weigth"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="374dp"
        android:layout_height="46dp"
        android:ems="50"
        android:hint="@string/et_UserName_hint"
        android:inputType="number|textWebEmailAddress|textPersonName"
        android:layoutDirection="ltr"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="374dp"
        android:layout_height="46dp"
        android:drawableRight="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/et_Password_hint"
        android:inputType="textPassword"
        android:layoutDirection="ltr"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/ff21"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/txt_accountsignup"
        android:layout_width="179dp"
        android:layout_height="17dp"
        android:text="@string/txt_an_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_login"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_signup"
        android:textColor="@color/ff21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

</androidx.constraintlayout.widget.ConstraintLayout>